# retail-company-langgraph

./: .gitignore  CLAUDE.md  README.md  README_retry_explanation.md  README_technical_choices.md  TODO.md  langgraph.json  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
docs/current_project/: render_current_graph.py
docs/full graph/: full_system_mermaid.md  render_full_graph.py
docs/hld/: .$hld_architecture.drawio.bkp  hld_architecture.drawio
src/: config.py  console.py  graph.py  main.py  state.py
src/database/: bq_client.py  db_schema.md
src/golden_knowledge/: golden_knowledge.json
src/nodes/: __init__.py  delete_reports.py  general_response.py  golden_knowledge.py  report_writer.py  report_writer_pii_agent.py  router.py  sql_executor.py  sql_generator.py
src/persona/: persona.yaml
src/questions/: test_questions.md
